--- a/index.html
+++ b/index.html
@@ -5,10 +5,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="./index.css">
     <title>Form Validation</title>
 </head>
 
 <body>
+
+    <!-- Container start  -->
+    <div class="container">
+        
+    </div>
+    <!-- Container end -->
+
+    <!-- Javascript script -->
+    <script src="./index.js"></script>
 
 </body>
 
