Added the username form-control

--- a/index.html
+++ b/index.html
@@ -13,7 +13,19 @@
 
     <!-- Container start  -->
     <div class="container">
-        
+
+        <!-- Form start -->
+        <form id="form" class="form">
+            <h2>Register With Us</h2>
+            <!-- form-control start -->
+            <div class="form-control">
+                <label for="username">Username</label>
+                <input type="text" id="username" placeholder="Enter username">
+            </div>
+            <!-- form-control end -->
+        </form>
+        <!-- Form end -->
+
     </div>
     <!-- Container end -->
 
