--- a/index.html
+++ b/index.html
@@ -23,6 +23,24 @@
                 <input type="text" id="username" placeholder="Enter username">
             </div>
             <!-- form-control end -->
+            <!-- form-control start -->
+            <div class="form-control">
+                <label for="email">Email</label>
+                <input type="text" id="email" placeholder="Enter email">
+            </div>
+            <!-- form-control end -->
+            <!-- form-control start -->
+            <div class="form-control">
+                <label for="password">Password</label>
+                <input type="password" id="password" placeholder="Enter password">
+            </div>
+            <!-- form-control end -->
+            <!-- form-control start -->
+            <div class="form-control">
+                <label for="confirm-password">Confirm Password</label>
+                <input type="password" id="confirm-password" placeholder="Enter password">
+            </div>
+            <!-- form-control end -->
         </form>
         <!-- Form end -->
 
