Added css reset

--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
                 <input type="password" id="confirm-password" placeholder="Enter password">
             </div>
             <!-- form-control end -->
+            <!-- Submit button start -->
+            <button type="submit">Submit</button>
+            <!-- Submit button end -->
         </form>
         <!-- Form end -->
 
