Added small tag in form-controls for showing errors

--- a/index.html
+++ b/index.html
@@ -21,24 +21,28 @@
             <div class="form-control">
                 <label for="username">Username</label>
                 <input type="text" id="username" placeholder="Enter username">
+                <small>The error is</small>
             </div>
             <!-- form-control end -->
             <!-- form-control start -->
             <div class="form-control">
                 <label for="email">Email</label>
                 <input type="text" id="email" placeholder="Enter email">
+                <small>The error is</small>
             </div>
             <!-- form-control end -->
             <!-- form-control start -->
             <div class="form-control">
                 <label for="password">Password</label>
                 <input type="password" id="password" placeholder="Enter password">
+                <small>The error is</small>
             </div>
             <!-- form-control end -->
             <!-- form-control start -->
             <div class="form-control">
                 <label for="confirm-password">Confirm Password</label>
                 <input type="password" id="confirm-password" placeholder="Enter password">
+                <small>The error is</small>
             </div>
             <!-- form-control end -->
             <!-- Submit button start -->
